--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
 
   <!-- Bootstrap JS cdn -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY&loading=async"></script>
 </body>
 
 </html>
